--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-icons": "^1.13.1",
     "classnames": "^2.5.1",
     "framer-motion": "^12.23.5",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
