--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "classnames": "^2.5.1",
     "framer-motion": "^12.23.5",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5",
