--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.5.1",
     "framer-motion": "^12.23.5",
     "leaflet": "^1.9.4",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
